[gd_scene load_steps=30 format=3 uid="uid://cptrqxvvxtatd"]

[ext_resource type="Script" path="res://enemy scenes/brontoburt/brontoburt.gd" id="1_n21ih"]
[ext_resource type="Texture2D" uid="uid://dtjoxob6xetk6" path="res://kirbySprites/enemy/brontoburt.png" id="2_hshi8"]
[ext_resource type="Texture2D" uid="uid://bmvru8kvigoox" path="res://kirbySprites/enemy/enemy death 1x17.png" id="2_rgoa6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uh2er"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujodb"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikp8u"]
size = Vector2(48, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8q8tf"]
size = Vector2(21, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la7fr"]
size = Vector2(101, 95.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8ia1"]
atlas = ExtResource("2_rgoa6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rkfn"]
atlas = ExtResource("2_rgoa6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5v4o"]
atlas = ExtResource("2_rgoa6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_of7s5"]
atlas = ExtResource("2_rgoa6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65o8o"]
atlas = ExtResource("2_rgoa6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qmas"]
atlas = ExtResource("2_rgoa6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l01bm"]
atlas = ExtResource("2_rgoa6")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26t6t"]
atlas = ExtResource("2_rgoa6")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpwcn"]
atlas = ExtResource("2_rgoa6")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_323np"]
atlas = ExtResource("2_rgoa6")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmc40"]
atlas = ExtResource("2_rgoa6")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56vg3"]
atlas = ExtResource("2_rgoa6")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_timx8"]
atlas = ExtResource("2_rgoa6")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsrnt"]
atlas = ExtResource("2_rgoa6")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiavo"]
atlas = ExtResource("2_rgoa6")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s6qf"]
atlas = ExtResource("2_rgoa6")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvicw"]
atlas = ExtResource("2_rgoa6")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbnxx"]
atlas = ExtResource("2_hshi8")
region = Rect2(0, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_a70yp"]
atlas = ExtResource("2_hshi8")
region = Rect2(22, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_gecl6"]
atlas = ExtResource("2_hshi8")
region = Rect2(44, 0, 22, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvmmi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8ia1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rkfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5v4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of7s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65o8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qmas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l01bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26t6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpwcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_323np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmc40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56vg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_timx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsrnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiavo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s6qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvicw")
}],
"loop": true,
"name": &"dead",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbnxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a70yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gecl6")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="brontoburt" type="CharacterBody2D" groups=["mobs"]]
collision_layer = 2
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 0.0
floor_snap_length = 0.0
script = ExtResource("1_n21ih")

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uh2er")
debug_color = Color(0.890196, 0.317647, 0.196078, 0.419608)

[node name="hitDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitDetect"]
position = Vector2(0.083992, -0.000564575)
shape = SubResource("RectangleShape2D_ujodb")

[node name="walldetectX" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walldetectX"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ikp8u")
debug_color = Color(0.686275, 0.494118, 0.172549, 0.419608)

[node name="walldetectY" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walldetectY"]
position = Vector2(1.45455e-05, -6.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_8q8tf")
debug_color = Color(0.662745, 0.513726, 0.0705882, 0.419608)

[node name="playerDetect" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetect"]
shape = SubResource("RectangleShape2D_la7fr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kvmmi")
animation = &"dead"
autoplay = "default"

[node name="fliptimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="walldetectX" to="." method="_on_walldetect_x_body_entered"]
[connection signal="body_entered" from="walldetectY" to="." method="_on_walldetect_y_body_entered"]
[connection signal="body_entered" from="playerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="playerDetect" to="." method="_on_player_detect_body_exited"]
[connection signal="timeout" from="fliptimer" to="." method="_on_fliptimer_timeout"]
